@@ -61,6 +61,8 @@ production.
 * The spyc library is now no longer included in phase3.
 * (bug 28343) Unused preferences contextlines/contextchars have been removed
 * $wgSkinExtensionFunctions has been removed. Use $wgExtensionFunctions instead.
+* $wgProto has been removed. You now only need to set $wgServer to change the 
+  URL protocol.
 
 === New features in 1.18 ===
 * (bug 8130) Query pages should limit to content namespaces, not just main
